# kinasephos

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  README_zh.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
audit/: LICENSE_AUDIT.md  TRAINING_DATA_DECISION.md  archive_inventory.csv  dataset_catalog.csv  dataset_lineage.md  duplicate_files.csv  file_inventory.csv  file_inventory.json  summary.json  version_map.csv
configs/: data.yaml  evaluate.yaml  predict.yaml  train_full.yaml  train_smoke.yaml
data/: README.md
docs/: architecture.md  ci.md  data_asset_audit.md  data_pipeline.md  evaluation.md  limitations.md  project_story.md  reproducibility.md  source_material_audit.md  training.md
examples/: demo_input.csv  demo_sequences.fasta  expected_output_schema.csv
notebooks/: 01_demo_inference.ipynb
scripts/: audit_assets.py  cache_teacher_embeddings.py  evaluate.py  export_student.py  generate_demo_data.py  predict.py  prepare_data.py  run_cdhit.py  train.py
src/kinasephos/: __init__.py  cli.py  constants.py
tests/: test_accession_mapping.py  test_dataset.py  test_inference.py  test_inventory.py  test_loss_masking.py  test_metrics.py  test_parsers.py  test_smoke_train.py  test_splitting.py  test_student_shapes.py  test_teacher_cache.py  test_teacher_pooling.py  test_windowing.py
(+31 files in other folders)
