[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinasephos"
version = "0.1.0"
description = "Clean-room, leakage-aware kinase phosphorylation prediction with a distilled student Transformer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CZY"}]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "PyYAML>=6,<7",
  "scikit-learn>=1.3,<2",
  "torch>=2.1,<3",
]

[project.optional-dependencies]
teacher = ["transformers>=4.38,<5"]
excel = ["openpyxl>=3.1,<4"]
dev = ["pytest>=7.4,<9", "ruff>=0.6,<1"]

[project.scripts]
kinasephos = "kinasephos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

